--- a/index.html
+++ b/index.html
@@ -2,25 +2,27 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>sphere</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+  <title>랜덤 이미지</title>
   <style>
-    body {
+    html, body {
       margin: 0;
-      background-color: #000;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+      padding: 0;
+      background: #000;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      touch-action: auto;
     }
     img {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: contain;
+      display: block;
+      max-width: none;
+      max-height: none;
     }
   </style>
 </head>
 <body>
-  <img src="sphere.jpg" alt="sphere image" />
+  <img id="randomImage" src="" alt="랜덤 이미지" />
+  <script src="script.js"></script>
 </body>
 </html>
