--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <title>랜덤 이미지</title>
+  <title>spheres, Sihyun Park</title>
   <style>
     html, body {
       margin: 0;
