--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <title>spheres, Sihyun Park</title>
+  <title>sphere, Sihyun Park</title>
   <style>
     html, body {
       margin: 0;
@@ -12,12 +12,15 @@
       width: 100%;
       height: 100%;
       overflow: auto;
-      touch-action: auto;
     }
     img {
       display: block;
-      max-width: none;
-      max-height: none;
+      width: 100%;
+      height: auto;
+      max-width: 90vw;
+      max-height: 90vh;
+      object-fit: contain;
+      margin: 0 auto;
     }
   </style>
 </head>
